Resolve CSS bug that misaligned items on smaller screens

--- a/client/src/stories/Layout/layout.css
+++ b/client/src/stories/Layout/layout.css
@@ -4,7 +4,7 @@
   width: 100vw;
 
   display: grid;
-  grid-template-rows: 100% 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-areas:
     'head'
     'main';
